--- a/lor-deck-viewer/package.json
+++ b/lor-deck-viewer/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "canvasjs": "^1.8.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
