updated 'runeterra' package

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "runeterra": "0.0.7"
+    "runeterra": "^0.1.0"
   }
 }
