--- a/lor-deck-viewer/package.json
+++ b/lor-deck-viewer/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.12.0",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "runeterra": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
